* Handling of TaskPath etc. changed